Fix footer on contact page on iphone sized screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -290,6 +290,12 @@ a.pure-button-primary:hover {
   }
 }
 
+.pure-g.page-content.bottom-of-page-padding {
+  .pure-u-1.contact{
+    padding-bottom: 220px;
+  }
+}
+
 /*
  * -- TABLET (AND UP) MEDIA QUERIES --
  * On tablets and other medium-sized devices, we want to customize some
